--- a/TimerWorkPCFrame/TimerWorkPCFrame.csproj
+++ b/TimerWorkPCFrame/TimerWorkPCFrame.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Converters\DayWeekToStringRu.cs" />
     <Compile Include="Model\WorkSessionModel.cs" />
     <Compile Include="ViewModel\BaseNotify.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
@@ -117,6 +118,7 @@
   <ItemGroup>
     <Resource Include="SunIco.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.0.2\build\Fody.targets" Condition="Exists('..\packages\Fody.6.0.2\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
